<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.quicktip.quick_tip_servant.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="30dp"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/bind_gotip_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="?borderlessButtonStyle"
            android:text="@string/action_bind_gotip"
            android:textColor="#fff"
            android:elevation="0dp"
            android:background="@color/colorPrimary"
            android:paddingRight="20dp"
            android:drawableTop="@drawable/ic_wifi_tethering_black_24dp"
            android:layout_marginEnd="30dp"/>

        <Button
            android:id="@+id/unbind_gotip_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:elevation="0dp"
            style="?borderlessButtonStyle"
            android:textColor="#fff"
            android:paddingLeft="20dp"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/ic_phonelink_off_black_24dp"
            android:text="@string/action_unbind_gotip">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/list_title_recent_tip"
            android:textColor="#fff"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:id="@+id/progress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />

        </LinearLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/refreshable_view">

            <ListView
                android:id="@+id/recent_tip_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>

</LinearLayout>