<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.quicktip.quick_tip_servant.WalletActivity">

    <LinearLayout
        android:id="@+id/progress"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/wallet_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textColor="#666"
            android:text="@string/prompt_money">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:gravity="center">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text=" $"
                android:textColor="@color/colorSubPrimaryDark"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/wallet_money"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorSubPrimaryDark"
                android:text="100"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <EditText
                android:id="@+id/withdraw_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_withdraw"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />

            <LinearLayout
                android:id="@+id/progress_lite"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp" />

            </LinearLayout>

            <Button
                android:id="@+id/withdraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:textColor="#fff"
                android:text="@string/action_withdraw">
            </Button>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
